<resources>
    <string name="app_name">Diab-midT2</string>
    <string name="welcome">Welcome to the project of Ahmed Diab, 180470</string>
    <string name="Id">ID</string>
    <string name="name">Name</string>
    <string name="email">e-mails</string>
    <string name="number">phone number</string>
    <string name="bttninsert">Insert</string>
    <string name="Active2">Activity 2</string>
    <string name="Active3">Activity 3</string>
    <string name="Active1">Activity 1</string>
    <string name="view">view</string>

</resources>